# pr-insight

./: .dockerignore  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.github_action  README.md  SECURITY.md  codecov.yml  docker-compose.yml  index.html  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-and-test.yaml  code_coverage.yaml  e2e_tests.yaml  pr-insight-review.yaml
core-abilities/: index.html
core-abilities/compression_strategy/: index.html
core-abilities/dynamic_context/: index.html
core-abilities/fetching_ticket_context/: index.html
core-abilities/interactivity/: index.html
core-abilities/metadata/: index.html
core-abilities/self_reflection/: index.html
docker/: Dockerfile  Dockerfile.lambda
docs/: README.md  mkdocs.yml
docs/docs/: index.md  summary.md
docs/overrides/: main.html
faq/: index.html
installation/: index.html
installation/azure/: index.html
installation/bitbucket/: index.html
installation/gitea/: index.html
installation/github/: index.html
installation/gitlab/: index.html
installation/locally/: index.html
installation/pr_agent/: index.html
overview/data_privacy/: index.html
pr_benchmark/: index.html
pr_insight/: cli.py  cli_pip.py  config_loader.py  custom_merge_loader.py
pr_insight/agent/: pr_insight.py
pr_insight/algo/: __init__.py  common.py  file_filter.py  git_patch_processing.py  github_utils.py  language_handler.py  markdown_utils.py  parser_utils.py  patch_utils.py  pr_processing.py  settings_utils.py  token_handler.py  utils.py  utils.py.bak
pr_insight/git_providers/: __init__.py  azuredevops_provider.py  bitbucket_provider.py  bitbucket_server_provider.py  codecommit_provider.py  gerrit_provider.py  git_provider.py  gitea_provider.py  github_provider.py  github_provider_auth.py  github_provider_comments.py  github_provider_diff.py  github_provider_repo.py  gitlab_provider.py  utils.py  (+1 more)
search/: search_index.json
summary/: index.html
tools/: index.html
usage-guide/: index.html
vscode-extension/: package.json  tsconfig.json
(+152 files in other folders)
